--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="hero-section">
         <div class="container section-hero">
             <h1 class="slogan">
-                Effective Solutions </br>
+                Effective Solutions <br/>
                 for Your Business
             </h1>
             <button type="button" class="order-btn">Order Service</button>
